--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,19 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v2
       with:
-        node-version: '12.x'
-    - name: Install dependencies
-      run: yarn --frozen-lockfile
+        node-version: '15.x'
+    - name: Initialize NPM
+      run: npm init --yes
+
+    - name: Install Honkit
+      run: npm install honkit
 
     - name: Build Honkit
-      run: yarn build
+      run: npx honkit build . ./docs
 
     - name: Push to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
-        publish_dir: honkit/
+        publish_dir: docs/
